--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ local.properties
 
 # Uncomment this line if you wish to ignore the project description file.
 # Typically, this file would be tracked if it contains build/dependency configurations:
+#.project
 
 ### Eclipse Patch ###
 # Spring Boot Tooling
@@ -112,4 +113,3 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,eclipse,maven
-/test/
