--- a/.gitignore
+++ b/.gitignore
@@ -112,4 +112,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+Servers
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,eclipse,maven
