--- a/.gitignore
+++ b/.gitignore
@@ -113,5 +113,5 @@ $RECYCLE.BIN/
 *.lnk
 
 Servers
-
+driver.properties
 # End of https://www.toptal.com/developers/gitignore/api/windows,eclipse,maven
