--- a/library_lms/pom.xml
+++ b/library_lms/pom.xml
@@ -55,6 +55,12 @@
 		<artifactId>commons-io</artifactId>
 		<version>2.11.0</version>
 	</dependency>
+	<dependency>
+	  <groupId>com.google.code.gson</groupId>
+	  <artifactId>gson</artifactId>
+	  <version>2.8.9</version>
+	</dependency>
+
 </dependencies>
   <build>
     <plugins>
