--- a/library_lms/pom.xml
+++ b/library_lms/pom.xml
@@ -60,6 +60,12 @@
 	  <artifactId>gson</artifactId>
 	  <version>2.8.9</version>
 	</dependency>
+	<!-- JSON 라이브러리 추가 (Gson) -->
+	<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.8.9</version>
+	</dependency>
 
 </dependencies>
   <build>
